custom header logo color background

--- a/style.css
+++ b/style.css
@@ -66,3 +66,11 @@ h2.post-title {
 .tags li{
     color: #3D9970;
 }
+
+.header-logo{
+    margin-top: 30px;
+}
+
+.header-logo a img{
+    border-radius: 50px;
+}
