slider image and testimonial

--- a/style.css
+++ b/style.css
@@ -74,3 +74,10 @@ h2.post-title {
 .header-logo a img{
     border-radius: 50px;
 }
+
+
+.testimonial img{
+    height: 120px;
+    width: 120px;
+    border-radius: 60px;
+}
